# mirror

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  flake.nix
schema/: nexus.schema  sema.schema
src/: client.rs  config.rs  configuration_writer.rs  decision.rs  engine.rs  error.rs  lib.rs  readback.rs  schema_daemon.rs  service.rs  shipper.rs  store.rs
src/schema/: daemon.rs  nexus.rs  sema.rs
tests/: append_addressing_refusal.rs  daemon_logic.rs  end_to_end_arc.rs  landed_body_readback.rs
